# Receipt

./: .gitignore  LICENSE  README.md  main.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  text_image.ipynb  tox.ini
.github/workflows/: CI.yaml
functions/: setup.cfg
functions/src/functions/: image_info.py  load.py  save.py
project/src/: app.py  draw_result.ipynb
project/src/ocr/: const.py  detector.py  e_test.ipynb  e_test.py  extract_receipt.py  process.py  scan.ipynb  test.py
project/src/operation/: load.py  save.py
project/src/process_image/: __init__.py  convert_to_text.py  remove_shadow.py  rotate_image.py
src/: draw_result.ipynb  extract_receipt.ipynb  main.py
src/config/: const.py
src/operation/: __init__.py  load.py
src/process_image/: __init__.py  convert_to_text.py  remove_shadow.py  rotate_image.py
src/receipt_extraction/: detector.py  extract.py  process.py  scan_receipt.py
src/utils/: __init__.py  const.py  load.py
temporary_files/: more_info_image.ipynb  remove_shadow.ipynb  rotate.ipynb  text_image.ipynb
tests/: test_1.py  test_sample.py
