[metadata]
name = Marceli
description = The goal of the project is to read the list of shopping from your receipt. 
author = Marceli Górski
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11 :: Only

[options]
packages =
    src
install_requires =
    requests>=2
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=2.0
    mypy>=1.0
    flake8>=4.0
    tox>=4.4

[options.package_data]
src = py.typed


[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
inline-quotes = double

# Plugins:
max-complexity = 6
max-line-length = 79

# Excluding some directories:
exclude =
  .git
  __pycache__
  .venv
  .eggs
  *.egg

ignore =
  # unknown target name - arg with underscore. Until: https://github.com/peterjc/flake8-rst-docstrings/issues/26
  RST306,
  # joining strings with plus sing
  W503,
  # upper-case constant - fine as class variables
  WPS115,
  # f-strings are fine
  WPS305,
  # default inheritance from `object`
  WPS306,
  # static methods are fine
  WPS602,

per-file-ignores =
  */__init__.py:
    # init file is for exposing interface so it's fine that import is unused
    F401
    # unfortunately importing in __init__ is seen by flake8 as logic
    WPS412

  # pydantic based models
  *_schema.py:
    # @validator is also @classmethod so `cls` is a correct word
    N805
    # `assert` can be used in in a validator
    S101

  tests/*:
    # test module should be named descriptive enough to not include docstring
    D100
    # test name should be descriptive enough to not include docstring
    D103
    # assets are essential for testing
    S101
    # accessing protected members are allowed in tests
    W0212
    # pytest fixtures are not redefining
    W0621
    # tests should have long, descriptive name
    WPS118
    # over-use of string constant is for testing purpuse
    WPS226
    # magic numbers can be used in tests
    WPS432
    # usage of protected members are allowed in tests
    WPS437
    # pytest fixtures are not shadowing
    WPS442


[isort]
line_length = 79


[mypy]
[mypy-numpy]
ignore_missing_imports = True
